changed the order of the css links in the main.hbs to see if that would resolve issue of popup  modal not showing up in safari and mobile chrome.  Didn't work.  Added an ID to the element on line 33 to allow media query manipulation in signin.hbs.  Changed the size of the modal to fit on mobile.

--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -367,15 +367,20 @@ iframe {
 		/*.s {position: fixed;}*/
 		.P {position: fixed; right: 180px; top:29%;}
 		.M {position: fixed; right: 123px; top:29%;}
+		
 		/*/// Welcome Screen ///*/
 		.chicken {position: absolute; z-index:-2; width:89%; top:10%; opacity: 0.2; float:none; padding:0;}
 		.greetings {position: absolute; float:none; top:34px; left:40px; width: 151px; margin:0;}
 		#i_am {color:yellow;}
 		#salute {color:red;}
 		#rod {font-size: 533%; width: 362px; margin: 0;}
-		#me {position: absolute; top:53px; font-size: 322%; width:366px; height:auto;}
-		#name2 {position: absolute; top: 384px; font-size: 322%; width:366px; height:auto;}
+		#me {position: absolute; top:53px; font-size: 322%; width:366px; height:auto; color:yellow;}
+		#name2 {position: absolute; top: 384px; font-size: 322%; width:366px; height:auto; color:red;}
 		.nameW {position: absolute; font-size: 351%; top: 157px;}
+
+		/*/// Failed login Modal ///*/
+		#myModal {position:absolute; width:386px; top:53px; padding:0; height:46%; left:14px; top: 133px;}
+		#modal-content {position:absolute; margin:0; width: 100%;}
 	}
 
 	/*///////////iphone 6 Portrait Orientation /////////////*/
